# live-subtitles

./: .gitignore  LICENSE  README.md  index.html  jsconfig.json  package.json  pnpm-lock.yaml  release.ps1  rsbuild.config.js  settings.html  vite.config.js
.github/: copilot-instructions.md
.github/workflows/: publish.yml
docs/: GITHUB_SECRETS_SETUP.md  QUICK_RELEASE.md  RELEASE.md  RELEASE_GUIDE.md  TODO.md  UPDATER_SETUP.md
src/: App.vue  Settings.vue  main.js  settings.js
src-tauri/: Cargo.toml  build.rs  installer-hooks.nsh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/styles/: subtitle.css
src-tauri/src/: asr.rs  audio.rs  audio_wasapi.rs  config.rs  lib.rs  main.rs  online_asr.rs
src-tauri/styles/: subtitle.css
src/assets/styles/: var.css
src/router/: index.js
src/stores/: settings.js
