[package]
name = "live-subtitles"
version = "0.1.1"
description = "A live subtitles application using Tauri and sherpa-rs."
authors = ["caolib"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "live_subtitles_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 音频捕获 (启用 WASAPI 支持)
cpal = { version = "0.16", features = [] }

# Windows WASAPI loopback
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_Foundation",
    "Win32_System_Threading",
] }

# 语音识别 (使用预编译库加速构建, 启用 sys 以访问 OnlineRecognizer)
sherpa-rs = { version = "0.6", features = ["download-binaries", "sys"] }

# 异步运行时
tokio = { version = "1", features = ["sync", "rt-multi-thread"] }

# 音频重采样
rubato = "0.16"

